# nyc-taxi-eta-expected-time-of-arrival

./: .gitignore  README.md  personal_project_notes.docx  pyproject.toml  start.py
.github/workflows/: pull-request.yml  python-tests.yml
components/: data_ingestion.py  data_preprocessing.py  feature_engineering.py  ride_route.html
configs/: data_configs.py
data/raw_data/: taxi_zones_with_centroids.dbf
documents/00_business_requirements/: business_requirements_v1.md
documents/01_architecture/: .$data_architecture.drawio.dtmp  data_architecture.drawio
my_utils/: data_utils.py
notebooks/: batch_processing.ipynb  combineing_whether_data.ipynb  data_processing.ipynb  dl_modeling.ipynb  downloader.ipynb  main.py  ml_modeling.ipynb  starter.ipynb
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/new_start/: spark.ipynb  traffic.ipynb  understand_data.ipynb
notebooks/starter/: distance_calaculator_plotter.ipynb  ride_route.html  starter.ipynb  starter_small.ipynb  zone_mapper.ipynb  zone_mapper_extract_lat_long.ipynb
public/: nyc_multiple_rides_with_length.html
src/nyc_taxi_eta_expected_time_of_arrival/: __init__.py
src/nyc_taxi_eta_expected_time_of_arrival/components/: data_ingestion.py  data_preprocessing.py  data_validation.py  feature_engineering.py
src/nyc_taxi_eta_expected_time_of_arrival/configs/: model_configs.py  settings.py
src/nyc_taxi_eta_expected_time_of_arrival/utils/: data_utils.py
src/uber_time_estimation/configs/: settings.py
tests/: sample_test.py
utils/: data_utils.py
