[project]
name = "uber-time-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.29.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[project.scripts]
uber-time-estimation = "uber_time_estimation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]

